[metadata]
name = mutalyzer-client
version = 0.0.1
description = CLI for the Mutalyzer API.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = https://github.com/mutalyzer/client
keywords =
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
copyright = 2018

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configparser
    requests
    pyvcf

[options.entry_points]
console_scripts =
    mutalyzer_client = mutalyzer_client.cli:main
